# CloudFlare-DDNS

./: Cargo.toml  README.md  cf  cf-ddns  cf.sh  cf_ddns.sh  cf_push.sh  cfopw.sh  config_choose.sh  eg.yaml  my_yaml.txt  old_cf.sh  resolve_cloudflare.sh  setup.ps1  setup_cloudflarest.sh  start_ddns.sh  wrapper.sh
.cargo/: config.toml
.github/workflows/: build.yml
CFRS/: Cargo.toml
CFRS/src/: account_settings.rs  github_push_settings.rs  main.rs  plugin_settings.rs  push.rs  push_settings.rs  resolve_settings.rs  settings_trait.rs  start.rs  ui_components.rs  view_schedule.rs
binaries/Linux_AMD64/: CFRS
binaries/Linux_ARM64/: CFRS
binaries/MacOS_AMD64/: CFRS
binaries/MacOS_ARM64/: CFRS
other/: cf_push.sh  cfst_hosts.sh  start.sh
setup/: cfopw.sh  setup.sh  setup_cloudflareddns.sh  setup_cloudflarest.sh
sh/: eg.yaml
src/: account_settings.rs  github_push_settings.rs  main.rs  plugin_settings.rs  push.rs  push_settings.rs  resolve_settings.rs  settings_trait.rs  start.rs  ui_components.rs
src/start/: cloudflare_api.rs  ddns_operations.rs  dns_operations.rs  ip_operations.rs  mod.rs  start_struct.rs  utils.rs
