[package]
name = "CFRS"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
base64 = "0.22"
colored = "3.0"
anyhow = "1.0"
dialoguer = "0.11"
console = "0.16"
regex = "1.11"
urlencoding = "2.1"

[profile.release]
opt-level = "z"        # 最小体积
lto = "fat"          # 启用链接时优化，使用 "fat" 模式以获得最佳效果
codegen-units = 1    # 禁用并行编译单元，确保全局优化
panic = "abort"      # 禁用回溯，减少运行时开销
strip = "symbols"    # 移除所有符号信息
debug = false        # 禁用调试信息
incremental = false  # 禁用增量编译，确保全局优化
overflow-checks = false  # 禁用整数溢出检查
